feat(lab7): lots of things